@@ -77,9 +77,7 @@
                     <source>21</source>
                     <target>21</target>
                     <release>21</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+
                 </configuration>
             </plugin>
         </plugins>
